# BlazeDB

./: .clang-format  .gitignore  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  index.html  install.sh  notes.txt  package-lock.json  package.json  readme.md  test.txt  update.sh
.github/: FUNDING.yml
.github/workflows/: ci.yml  pages.yml
BlazeDB/: package-lock.json
cmake/: PurgeBuild.cmake  WipeData.cmake
config/: settings.yml
docs/: mkdocs.yml  test.txt
docs/docs/: deployment.md  drivers.md  index.md  permissions.md  query-examples.md  quickstart.md
docs/docs/css/: theme.css
docs/docs/javascripts/: removeCredits.js
docs/docs/js/: remove.js
docs/overrides/: main.html
include/: prelude.h
include/config/: config.h
include/core/: db.h  paths.h
include/net/: serverTcp.h
include/query/: schema.h  sql.h
include/storage/: commitLog.h  manifest.h  memTable.h  ssTable.h  table.h
include/util/: ascii.h  binIo.h  crc32.h  encoding.h  json.h  log.h  murmur3.h  uuid.h
newdb/: .gitignore  CMakeLists.txt  Dockerfile  Makefile  install.sh  readme.md
newdb/cmake/: WipeData.cmake
newdb/config/: settings.yml
newdb/docs/: mkdocs.yml
newdb/docs/docs/: index.md  quickstart.md
newdb/docs/docs/stylesheets/: extra.css
newdb/include/: prelude.h
newdb/include/config/: config.h
newdb/include/query/: schema.h  sql.h
newdb/include/storage/: memTable.h  ssTable.h  table.h
newdb/include/util/: binIo.h  encoding.h  json.h  murmur3.h
newdb/src/app/: main.cpp
newdb/src/config/: config.cpp
newdb/src/core/: paths.cpp
newdb/src/net/: serverTcp.cpp
newdb/src/query/: schema.cpp  sql.cpp
newdb/src/storage/: commitLog.cpp  memTable.cpp  ssTable.cpp  table.cpp
newdb/src/util/: binIo.cpp  crc32.cpp  encoding.cpp  json.cpp  murmur3.cpp
newdb/tests/: test_server.py
src/app/: main.cpp
src/config/: config.cpp
src/core/: db.cpp  paths.cpp
src/net/: serverTcp.cpp  serverTcpClient.cpp  serverTcpQuota.cpp  serverTcpRun.cpp
src/net/commands/: auth.cpp  delete.cpp  insert.cpp  keyspace.cpp  metrics.cpp  ping.cpp  table.cpp  update.cpp  use.cpp
src/net/detail/: serverTcpInternal.h
src/query/: schema.cpp  sql.cpp
src/query/schema/: bytes.cpp  encode.cpp  formatTime.cpp  internal_json.cpp  internal_strings.cpp  json.cpp  parse.cpp  types.cpp  update.cpp
src/query/schema/detail/: internal.h
src/query/sql/: clauses.cpp  lexer.cpp  literals.cpp  sqlCommand.cpp
src/query/sql/detail/: parse_utils.h
src/storage/: commitLog.cpp  manifest.cpp  memTable.cpp  ssTable.cpp  table.cpp
src/util/: binIo.cpp  crc32.cpp  encoding.cpp  json.cpp  log.cpp  murmur3.cpp  uuid.cpp
test/npm/: package-lock.json  package.json
tests/: test_server.py
website/: dashboard.html  example.env  index.html  index.js  login.html  manage.html  package-lock.json  package.json  testQuota.js
website/database/: db.js
website/database/table/: backups.js  instances.js  user.js  whitelist.js
website/lib/: shared.js
website/public/css/: dashbaord.css  index.css  manage.css
website/routes/: auth.js  instances.js  validations.js  verifyToken.js
website/src/pages/components/: Sidebar.js
website/views/: dashboard.ejs  index.ejs  login.ejs  manage.ejs
